Updates from Overleaf

--- a/LP_AbsorptionEmission/LP_AbsorptionEmission.tex
+++ b/LP_AbsorptionEmission/LP_AbsorptionEmission.tex
@@ -17,14 +17,16 @@
   Optique Physique & R. Taillet & de Boeck &   \\
   \hline 
   Physique Statistique & Landau et Lifshitz & Ellipses &  \\
-  \hline 
+ \hline 
    Poly laser & A. Maitre &  &  \\
-\hline
- Sextant & & Hermann & \\
+ \hline
+  Sextant & & Hermann & \\
  \hline 
  Tout-en-un PC/PC* & M.-N. Sanz & Dunod (2022) & \\
  \hline 
  Physique en PC/PC* & Pascal Olive & Ellipses & \\
+ \hline
+ Laser & CAGNAC & & \\
  \hline
 \end{tabularx}
 \end{center}
@@ -45,11 +47,11 @@
   \newline
   
   \textbf{Déroulé détaillé de la leçon: }   \newline
-On verra deux modèles qui permettront d'expliquer le phénomène d'émission et absorption de la lumière dans les milieux.
-  \section{Absorption et émission spontanée}
+Spectre émission discret vs spectre d'émission continu : 
+  \section{Absorption et émission spontanées}
 
-  \subsection{Modèle de Bohr de l'atome}
-  Parler du modèle de Bohr (modèle obsolète), quantification des niveaux d'énergie des atomes (raies de l'hydrogène mais aussi d'autres espèces) en utilisant les relations de Planck-Einstein. Présenter spectre d'émission et d'absorption d'éléments chimiques. Utilité : composition de l'atmosphère d'une planète.
+  \subsection{Description du milieu matériel}
+  Quantification des niveaux d'énergie des atomes (raies de l'hydrogène mais aussi d'autres espèces) en utilisant les relations de Planck-Einstein. Présenter spectre d'émission et d'absorption d'éléments chimiques. Utilité : composition de l'atmosphère d'une planète.
   \subsection{Mesure spectroscopique du spectre d'émission du mercure Hg}
   \textcolor{blue}{Expérience quantitative :} On se propose ici de mesurer quelques raies d'émission du spectre de la lampe à vapeur de mercure. Pour cela on a besoin de :
   \begin{itemize}
