--- a/LP_Avancement.tex
+++ b/LP_Avancement.tex
@@ -7,28 +7,28 @@
   \hline 
   Titre de la leçon & Expériences & Avancement & Commentaires \\
   \hline
-\textbf{Gravitation} p\pageref{LP_Gravitation}  & \textcolor{green}{Pendule simple : mesure de g} & \textcolor{yellow}{\textbf{60\%}}  & Reprendre intro, partie marées à modifier, rajouter exemples effets de marée dans le système solaire, limite de Roche à bosser  \\
+\textbf{Gravitation} p\pageref{LP_Gravitation}  & \textcolor{green}{Pendule simple : mesure de g} & \textcolor{green}{\textbf{80\%}}  & Partie marées à modifier, rajouter exemples effets de marée dans le système solaire, limite de Roche à bosser  \\
   \hline 
   \hline
      \textbf{Lois de conservation en mécanique} p\pageref{LP_LoisConservation} & \textcolor{green}{Conservation de E chute bille} & \textcolor{orange}{\textbf{20\%}} & plan détaillé \\
   \hline 
-    \textbf{Notions de viscosité d'un fluide. \'{E}coulements visqueux} p\pageref{LP_Viscosite} & \textcolor{green}{Détermination de $\eta_{silicone}$ par la chute des billes}  & \textcolor{orange}{\textbf{30\%}} & Plan trop ambitieux, faire démo loi de Stokes dans partie dynamique + faire manip \\
+    \textbf{Notions de viscosité d'un fluide. \'{E}coulements visqueux} p\pageref{LP_Viscosite} & \textcolor{green}{Détermination de $\eta_{silicone}$ par la chute des billes}  & \textcolor{green}{\textbf{80\%}} &  \\
   \hline 
   \textbf{Modèle de l'écoulement parfait d'un fluide} p\pageref{LP_EcoulementParfait} & \textcolor{green}{Mesure $\rho_{air}$ sonde Pitot + anémomètre} & \textcolor{green}{\textbf{100\%}} & Bien revoir couches limites \\
   \hline
   \textbf{Phénomènes interfaciaux impliquant des fluides} p\pageref{LP_PhenomenesInterfaciaux} & \textcolor{green}{Loi de Laplace - expériences quali bulles savon }& \textcolor{green}{\textbf{80\%}} & Transition gravité-mouillage \\
   \hline 
   \hline
-  \textbf{Premier principe de la thermodynamique} p\pageref{LP_PremierPrincipe} & \textcolor{orange}{Mesure $c_{fer}$ dans calorimètre} - \textcolor{red}{Expérience Joule} & \textcolor{orange}{\textbf{50\%}} & Leçon Lydia a bien marché \\
+  \textbf{Premier principe de la thermodynamique} p\pageref{LP_PremierPrincipe} & \textcolor{orange}{Mesure $c_{fer}$ dans calorimètre} - \textcolor{red}{Expérience Joule} & \textcolor{green}{\textbf{80\%}} & Voir expérience de Joule\\
   \hline 
-  \textbf{Transitions de phase} p\pageref{LP_TransitionPhase} & \textcolor{green}{Mesure chaleur latente de l'eau} & \textcolor{red}{\textbf{20\%}} & \\
+  \textbf{Transitions de phase} p\pageref{LP_TransitionPhase} & \textcolor{green}{Mesure chaleur latente de l'eau} & \textcolor{green}{\textbf{70\%}} & Passage 1er ordre / 2nd ordre à bosser. Plan sans doute trop ambitieux.\\
   \hline 
   \textbf{Phénomènes de transport} p\pageref{LP_Transport} & \textcolor{green}{Diffusion du glycérol dans l'eau} & \textcolor{green}{\textbf{80\%}} & à répéter\\
   \hline 
   \hline
   \textbf{Conversion de puissance électromécanique} p\pageref{LP_ConversionPuissance} & \textcolor{green}{Etude MCC (résistance, rendement, ...)} & \textcolor{yellow}{\textbf{60\%}} & Finir moteur synchrone\\
   \hline 
-  \textbf{Induction électromagnétique} p\pageref{LP_Induction} & \textcolor{green}{Mesure inductance circuit RL} & \textcolor{red}{\textbf{0\%}} & Leçon Lydia assez complet\\
+  \textbf{Induction électromagnétique} p\pageref{LP_Induction} & \textcolor{green}{Mesure inductance circuit RL} & \textcolor{red}{\textbf{0\%}} & Leçon Lydia à retravailler\\
   \hline
   \textbf{Rétroaction et oscillations} p\pageref{LP_RetroactionOscillation} & \textcolor{red}{Quali : MCC asservi.}, \textcolor{yellow}{Quanti : Pont de Wien} & \textcolor{red}{\textbf{0\%}} & \\
   \hline
@@ -42,19 +42,19 @@
 \hline
   \textbf{Ondes progressives, ondes stationnaires} p\pageref{LP_OndesProgressives}~& \textcolor{green}{vitesse de l'onde dans un câble coaxial} & \textcolor{orange}{\textbf{40\%}} & Faire partie onde progressive et onde stationnaire \\
   \hline
-  \textbf{Ondes acoustiques} p\pageref{LP_OndeAcoustique}~& \textcolor{green}{Mesure $c_{air}$ piézo} & \textcolor{red}{\textbf{0\%}} &  \\
+  \textbf{Ondes acoustiques} p\pageref{LP_OndeAcoustique}~& \textcolor{green}{Mesure $c_{air}$ piézo} & \textcolor{orange}{\textbf{50\%}} & Faire partie énergétique + chercher applications \\
   \hline
   \textbf{Propagation guidée des ondes} p\pageref{LP_PropagationGuidee} & \textcolor{green}{Quali : piezo + tube}, \textcolor{green}{Quanti : guide d'onde centi}& \textcolor{green}{\textbf{80\%}} & Ouverture à finir + Pertes et ROS à regarder. \\
   \hline
   \textbf{Microscopies optiques} p\pageref{LP_Microscopie}~& \textcolor{green}{Microscope maison, mesure grandissement}~& \textcolor{green}{\textbf{70\%}} & Rajouter profondeur de champ, être plus synthétique pour réussir à parler de contraste de phase ou fluorescence \\
   \hline
-  \textbf{Interférences à deux ondes en optique} p\pageref{LP_InterferencesDeuxOndes}~& \textcolor{green}{Mesure largeur fentes d'Young barette CCD} & \textcolor{orange}{\textbf{40\%}} & Plan à revoir en détail\\
+  \textbf{Interférences à deux ondes en optique} p\pageref{LP_InterferencesDeuxOndes}~& \textcolor{green}{Mesure largeur fentes d'Young barette CCD} & \textcolor{green}{\textbf{80\%}} & \\
   \hline
   \textbf{Interférométrie à division d'amplitude} p\pageref{LP_DivisionAmplitude} & \textcolor{green}{Michelson : doublet sodium} & \textcolor{green}{\textbf{100\%}} & A revoir vite fait coin d'air \\
   \hline
   \textbf{Diffraction de Fraunhofer} p\pageref{LP_DiffractionFraunhofer} & \textcolor{green}{Diffraction par une fente+CCD-MHTEX} \textcolor{green}{Filtrage spatial} & \textcolor{orange}{\textbf{30\%}} &  \\
   \hline
-  \textbf{Diffraction par des structures périodiques} p\pageref{LP_DiffractionPeriodique} & \textcolor{green}{Mesures raies mercure par un réseau} & \textcolor{red}{\textbf{0\%}} &  \\
+  \textbf{Diffraction par des structures périodiques} p\pageref{LP_DiffractionPeriodique} & \textcolor{green}{Mesures raies mercure par un réseau} & \textcolor{yellow}{\textbf{60\%}} & Définir facteur de structure/facteur de forme\\
   \hline
   \textbf{Absorption et émission de la lumière} p\pageref{LP_Absorption} & \textcolor{green}{Emission/absorption rhodamine} \textcolor{green}{Spectre emission lampe à vapeur de mercure + réseau} & \textcolor{red}{\textbf{0\%}} & Leçon Elric pas mal \\
   \hline
@@ -67,11 +67,17 @@
   \hline
   \textbf{Oscillateurs ; portraits de phase et non-linéarités} p\pageref{LP_PortaitPhase}~& \textcolor{yellow}{Borda sur le pendule + portait de phase} & \textcolor{red}{\textbf{0\%}} & Leçon Basile pour ref  \\
   \hline
-  \hline
+\end{tabularx}
+\end{center}
+
+\begin{center}
+\begin{tabularx}{\paperwidth-2cm}{| X | X | c | X |}
+\hline
   \textbf{Cinématique relativiste. Expérience de Michelson et Morley} p\pageref{LP_CinematiqueRelativiste} & \textcolor{red}{logiciel Gum\_MC, exp Frish et Smith} & \textcolor{red}{\textbf{20\%}} & Plan ok, manip à bosser  \\
   \hline
   \textbf{Effet tunnel : application à la radioactivité alpha} & \textcolor{green}{Simulation site colorado} & \textcolor{green}{\textbf{80\%}} & Faire tableau avec $T_{1/2}$ et E. Interprétation $T_{1/2}$ avec particule à travailler. \\
   \hline
+
 \end{tabularx}
 \end{center}
 
