--- a/LP_DiffractionPeriodique/LP_DiffractionStructurePeriodique.tex
+++ b/LP_DiffractionPeriodique/LP_DiffractionStructurePeriodique.tex
@@ -20,7 +20,7 @@
   \hline 
   Optique & J.-P. Pérez & Dunod & \\
   \hline 
-  Optique Physique et électronique & D. Mauras & PUF (2011à) & \\
+  Optique Physique et électronique & D. Mauras & PUF (2011) & \\
   \hline
   \url{http://ressources.univ-lemans.fr/AccesLibre/UM/Pedago/physique/02/optiondu/reseauphase.html} & Simulation réseau & Université du Mans & \\
 \end{tabularx}
@@ -106,6 +106,7 @@ L'objet périodique par excellence est le réseau.
   \textcolor{red}{Transition :} Ce qu'on a vu pour l'instant c'est qu'on peut mesurer le spectre d'émission d'une source polychromatique. Quelles sont ses limitations ? Il faut étudier plus en détail l'intensité résultante à travers une struture périodique la structure des pics d'interférences.
 
   \section{Facteur de structure et facteur de forme}
+  
   \subsection{Intensité de la diffraction}
 
   \section{Application : diffraction des solides cristallins}
