--- a/LP_Gravitation/LP_Gravitation.tex
+++ b/LP_Gravitation/LP_Gravitation.tex
@@ -50,7 +50,8 @@ limites qu’il est pertinent de souligner
   
   \section*{Introduction}
 
-Introduction historique avec Aristote et Galilée et la chute des corps. Expérience de pensée de Galilée : tous les objets tombent à la même vitesse dans le vide. Enfin, Newton qui décrit les lois de la mécanique classique, en particulier de gravitation universelle.
+Introduction avec les 4 forces fondamentales physique. Gravitation est une interaction qui n'est pas si immédiate à comprendre car elle est responsable de la chute des corps mais en même temps tous les objets ne tombent pas à la même vitesse. Dans l'Antiquité par exemple, Aristote (Traité du ciel 350 av. J-C.) : "Plus un corps est massif, plus il tombe vite". Expérience de pensée de Galilée (Dialogue sur les deux grands systèmes du monde, vers 1632) : "Tous les objets tombent à la même vitesse dans le vide". Qui a raison ? \url{https://www.sciencesetavenir.fr/fondamental/video-qu-est-ce-qui-tombe-le-plus-vite-une-plume-ou-une-boule-de-billard_23185}.\\
+C'est Newton qui comprend que les corps tombent à cause d'une force fondamentale qu'il appelle force de gravitation universelle. Nous allons tout d'abord commencer par décrire l'interaction gravitationnelle.
 
 
 \section{Interaction gravitationnelle}
