--- a/LP_Induction.tex
+++ b/LP_Induction.tex
@@ -86,7 +86,17 @@
     Flux propre : $\phi_p = L i$, $L$ inductance propre (H). \\
     f.e.m : $e = - L \frac{\ud i}{\ud t}$. \\
     Schéma équivalent en éléctrocinétique : convention générateur avec générateur, convention récepteur avec bobine. \\
-    - \textbf{Expérience quantitative 1 : Mesure de L}: Circuit RL, mesure du temps caractéristique sur oscilloscope.
+    - \textcolor{blue}{Expérience quantitative 1 : Mesure d'une inductance L}: 
+    \begin{itemize}
+        \item un L fixe (ne pas prendre bobine Leybold)
+        \item oscilloscope Keysight GOX
+        \item GBF,
+        \item câbles bananes, BNC-bananes,
+        \item résistance
+        \item multimètre Metrix,
+        \item LCR-mètre
+    \end{itemize}
+    Circuit RL, mesure du temps caractéristique sur oscilloscope avec le temps de réponse à 80\%.
     26min
     \item \textbf{Inductance mutuelle}: Dessin spire 1 avec ligne de champ et spire 2 dans champ magnétique créé par spire 1. \\
     - Flux créé par spire 1 à travers spire 2: $\phi_{21} = M_{21} i_1$ ; \\
