--- a/LP_LoideConservation.tex
+++ b/LP_LoideConservation.tex
@@ -56,7 +56,7 @@ En mécanique, nous connaissons trois lois d'évolution :
 \section{Conservation de la quantité de mouvement}
 
 \subsection{Système isolé}
-\textcolor{green}{Défiition :} Système fermé qui ne subit aucune action extérieure. \\
+\textcolor{green}{Définition :} Système fermé qui ne subit aucune action extérieure. \\
 En pratique cela n'arrive jamais car il y a toujours des forces gravitationnelles mais fondamental d'un point de vue conceptuel. L'Univers est par définition un système isolé donc tout sous-système A de l'Univers qui reçoit de la quantité de mouvement $\Delta \mathbf{P_A}$ d'un sous-système B avec lequel il intéragit, ce dernier a dû lui céder une quantité de mouvement $\Delta \mathbf{P_B}$ telle que :
 \begin{equation}
     \Delta(\mathbf{P_A}+\mathbf{P_B}= 0 \Leftrightarrow \Delta\mathbf{P_A} = -\Delta\mathbf{P_B}
