--- a/LP_PhenomenesTransport.tex
+++ b/LP_PhenomenesTransport.tex
@@ -18,7 +18,7 @@
   \hline
   Thermodynamique & Diu & & \\
   \hline 
-  Tout-en-un PC/PC* & M.-N. Sanz & Dunod (2016) & \\
+  Tout-en-un PC/PC* & M.-N. Sanz & Dunod (2022) & \\
   \hline 
   Ondes mécaniques et diffusion & Christian Garing & Ellipses (1998) & \\
   \hline
@@ -46,9 +46,7 @@ Les principes de la thermodynamique utilisent la notion de fonction d'état qui 
 
 \textcolor{blue}{Manip qualitative :} Mettre une goutte de sirop coloré dans de l'eau.\\
 
-\textcolor{blue}{Expérience qualitative :} Barreau  chauffé + caméra thermique.\\
-
-
+\textcolor{blue}{Expérience qualitative :} Barreau  chauffé + caméra thermique.
 
 \section{Equilibre thermodynamique local (max 10min)}
 
@@ -64,13 +62,13 @@ Interpréter les expériences avec ces 3 trois échelles. La température de l'e
 La température n'est pas la même sur toute la longueur des barreaux comme la densité de molécules dans le verre d'eau. Cependant on peut quand même définir sur des zones de faibles épaisseurs (faibles devant l'échelle de variation caractéristique de la température du barreau, ici par exemple une ligne horizontale de pixels) les variables d'états de la thermodynamique (température, pression, densité de particule, ...).
 
 \subsection{Equilibre thermodynamique local}
-Décrire des volumes mésoscopiques dans un volume macroscopique. D'après Diu p464 : "lors d'un processus hors équilibre, il y a équilibre thermodynamique local si tout sous-système macroscopique infinitésimal (ou volume mésoscopique) peut-être regardé comme ayant atteint l'équilibre thermodynamique ". Une variable d'état $Y$ peut donc être définie localement $Y(M,t)$ en un point M du système macro, à l'instant t. Hypothèse valable si le déséquilibre \og n'est pas trop \fg c'est-à-dire :
+Décrire des volumes mésoscopiques dans un volume macroscopique. D'après Diu p464 : \textcolor{green}{slide :} "lors d'un processus hors équilibre, il y a équilibre thermodynamique local si tout sous-système macroscopique infinitésimal (ou volume mésoscopique) peut-être regardé comme ayant atteint l'équilibre thermodynamique ". Une variable d'état $Y$ peut donc être définie localement $Y(M,t)$ en un point M du système macro, à l'instant t. Hypothèse valable si le déséquilibre \og n'est pas trop \fg c'est-à-dire :
 \begin{itemize}
-    \item l'équilibre thermo local règne partout dans le système
+    \item l'équilibre thermo local règne partout dans le système,
     \item les écarts à l'équilibre sont suffisament faible pour qu'on puisse les traiter au premier ordre : \textcolor{red}{approximation linéaire}
 \end{itemize}
 
-Qu'est-ce qui physiquement permet de décrire la variation des variables d'états ? 
+Comment peux-t'on décrire physiquement la variation des variables d'états ? 
 
 \subsection{Flux et courants}
 \textcolor{green}{Définition :} Le flux, noté $\Phi(t)$, il s'agit d'un débit (de particules, d'énergie, de charges, ...) à travers une surface $\mathcal{S}$ à l'instant t. Il est relié au vecteur densité de courant $\mathbf{j}$ dont le flux (au sens mathématique) à travers cette surface est :
