--- a/LP_PortaitPhase/LP_PortaitPhase.tex
+++ b/LP_PortaitPhase/LP_PortaitPhase.tex
@@ -51,7 +51,7 @@ Messages à faire passer : définition d'un portait de phase, portait de phase a
 Le notion de portait de phase est un outil très riche pour l'analyse de nombreux systèmes mécaniques, en particulier pour les oscillateurs. C'est que nous allons essayer de montrer dans cette leçon à travers quelques exemples.
 
   \section{Oscillateurs non-amortis}
-  On va s'intéresser à des systèmes mécaniques ou électrocinétiques dont on va négliger les phénomènes de dissipation. On va commencer par prendre l'exemple très simple du pendule pesant.
+  On va s'intéresser à des systèmes mécaniques ou électrocinétiques dont on va dans un premier temps négliger les phénomènes de dissipation. On va commencer par prendre l'exemple très simple du pendule pesant.
   \subsection{Equation du mouvement d'un pendule pesant}
   Exemple de la physique : pendule simple à petites oscillations. On applique le théorème du moment cinétique appliqué à la masse $m$ dans le référentiel terrestre qu'on suppose galiléen :
   \begin{equation}
@@ -63,15 +63,17 @@ Le notion de portait de phase est un outil très riche pour l'analyse de nombreu
   \end{equation}
   \textbf{Analogies :} courant dans un circuit LC suit la même équation.
   \subsection{Portrait de phase}
-  Définition d'un portait de phase.
+  Définition d'un portait de phase pour le pendule pesant.
   \subsection{Approche énergétique}
-  Parler de stabilité, conservation de l'énergie mécanique.
-
-  
+  Parler de stabilité, conservation de l'énergie mécanique.  
 
   \section{Effets non linéaires}
   Formule de borda pendule.\\
+  \subsection{Etude des effets non linéaires du pendule pesant}
+  Faire une acquisition à grand angle. Parler pendant l'acquisition du programme bordaThomas.ipynb
 
+  \section{Bifurcation}
+  \subsection{}
   \section*{Conclusion}
   Ouvrir sur les oscillateurs entretenus ? Van der Pol, résistance négative,
 
