--- a/LP_Resonance/LP_Resonance.tex
+++ b/LP_Resonance/LP_Resonance.tex
@@ -14,7 +14,7 @@
   \hline 
   Titre & Auteurs & Editeur (année) & ISBN \\
   \hline
-  & & & \\
+  Mécanique & J.M Brébec & HPrépa & \\
   \hline 
   & & &    \\
   \hline 
@@ -47,7 +47,7 @@
 \section*{Introduction}
 Définition : pour un système auquel qu'on soumet à une excitation sinusoïdale de pulsation $\omega$, la réponse du système est maximale à la pulsation $\omega_r$, appelée fréquence de résonance.
 
-\section{Oscillateurs harmoniques amortis}
+\section{Oscillateurs harmoniques forcés}
 
 \subsection{Résonance en vitesse en régime forcé} 
 
