--- a/LP_TensionSurface/LPF3_Tension_surface.tex
+++ b/LP_TensionSurface/LPF3_Tension_surface.tex
@@ -26,6 +26,8 @@ Notes de cours sur les fluides (2019-2020) & Marc Rabaud  &  Site agreg Montroug
   \hline
   Toute la physique dans un verre d'eau & Clément Santamaria & Ellipses (2005) & \\
   \hline
+  Thermodynamique & B. Diu & Hermann (2007) & \\
+  \hline 
 \end{tabularx}
 \end{center}
 
@@ -67,7 +69,7 @@ L'étude des phénomènes interfaciaux permet de répondre à un certain nombre 
 
   \textcolor{blue}{Expérience qualitative films de savon sur des surfaces (cubes) : il faut que le système minimise son énergie de surface.}
 
-   La forme sphérique d'une goutte ou d'une bulle assure une surface minimale en l'absence d'interaction (vidéo bulle d'eau dans l'espace : \url{https://www.youtube.com/watch?v=bKk_7NIKY3Y}).
+   Voir Diu Complément 5a. pour l'approche énergétique de la bulle de savon. vidéo bulle d'eau dans l'espace : \url{https://www.youtube.com/watch?v=bKk_7NIKY3Y}. 
    
   \subsection{Force capillaire}
 
