--- a/LP_EffetTunnel.tex
+++ b/LP_EffetTunnel.tex
@@ -14,8 +14,6 @@
   \hline 
   Titre & Auteurs & Editeur (année) & ISBN \\
   \hline
-  Reflexion totale frustrée & Polycopié de Jean Hare + Perez EM p581 &  & \\
-  \hline
   Tout-en-un PC/PC* & M.-N. Sanz & Dunod & \\
   \hline
   Leçons de Physique & Patrick Charmont & Dunod (2000) & \\
@@ -23,6 +21,8 @@
   \url{https://cahier-de-prepa.fr/pc*-poincare/download?id=1007} & & & \\
   \hline
   \url{https://phet.colorado.edu/sims/cheerpj/quantum-tunneling/latest/quantum-tunneling.html?simulation=quantum-tunneling} & colorado.edu & Université du Colorado & \\
+  \hline
+  Les nouvelles microscopies & L. Aigouy & Belin & \\
   \hline
 \end{tabularx}
 \end{center}
@@ -91,8 +91,6 @@ Calcul des fonctions d'ondes dans les zones 1, 2 et 3. Dire que $B_3$ s'annule c
 
 Donner les conditions aux limites $x=0$ et $x=a$. On obtient 4 équations avec 5 inconnues.
 
-
-
 \subsection{Coefficients de réflexion et transmission}
 Cf Dunod p1252.
 
@@ -103,7 +101,7 @@ On trouve R et T, on verifie qu'on a bien R+T=1 (conservation de l'énergie). \\
 \textcolor{blue}{Manip qualitative : montrer logiciel colorado qu'il y a transmission.}
 
 \subsection{Approximation de la barrière épaisse}
-Trouver $\delta$, l'interpréter. Garder l'analogie avec réflexion totale frustrée pour les questions.
+Trouver $\delta$, l'interpréter. Garder l'analogie avec réflexion totale frustrée (voir Aigouy p140) pour les questions.
 
 \section{Application à la radioactivité alpha}
 
