--- a/LP_PortaitPhase/borda_Thomas.ipynb
+++ b/LP_PortaitPhase/borda_Thomas.ipynb
@@ -73,13 +73,13 @@
     "# Attention de bien enregistrer une fois le pendule lancé. Choisir un temps d'échantillonage de 50 ms et une durée de + de 600 secondes\n",
     "# sur LatisPro avec un pendule qui bat la seconde.\n",
     "\n",
-    "nomreadfile = \"bordadonnees.txt\" #fichier à lire\n",
-    "nomwritefile = \"resultsBorda.txt\" #fichier à écrire\n",
+    "filedonnees = \"bordadonnees.txt\" #fichier enregistré à lire par Python (colonne 1 : temps (s), colonne 2 : Theta (°))\n",
+    "fileresult = \"resultsBorda.txt\" #fichier à écrire\n",
     "nomwritefile1 = \"resultsBorda1.txt\" #fichier à écrire\n",
     "boolfit = False\n",
     "# On commence par lire le document pour extraire les informations d'angle et de temps\n",
     "\n",
-    "f = open(nomreadfile, \"r\")\n",
+    "f = open(filedonnees, \"r\")\n",
     "lines = f.readlines()\n",
     "isfirstline = 0;\n",
     "\n",
@@ -88,7 +88,7 @@
     "\n",
     "\n",
     "for line in lines:\n",
-    "    if isfirstline==0:\n",
+    "    if isfirstline==0:   #pour ne pas garder \"temps\" et \"amplitude\" dans le fichier de données\n",
     "        isfirstline=1\n",
     "    else : \n",
     "        temps.append(float(line.split(';')[0]))\n",
@@ -98,12 +98,12 @@
     "tempsechant = temps[1]-temps[0]\n",
     "\n",
     "\n",
-    "##################################### Détermination des annulations #########################################\n",
+    "##################################### Détermination des annulations (période) #########################################\n",
     "\n",
     "#On recherche maintenant les temps pour lesquels le pendule passe par 0\n",
     "\n",
-    "tempspass0 = []\n",
-    "indicepass0 = []\n",
+    "tempspass0 = []   #liste des valeurs de temps pour lequel on passe par 0\n",
+    "indicepass0 = []  #liste contenant les indices des points pour lequel il y a changement de signe de l'amplitude\n",
     "\n",
     "#On commence par une recherche bête, puis on retirera les erreurs (les valeurs trop proches)\n",
     "tempsinter1 =-1\n",
@@ -124,8 +124,8 @@
     "tfin1 = 170\n",
     "\n",
     "f = plt.figure(1)\n",
-    "plt.plot(temps,angle, 'ro-')\n",
-    "plt.plot(tempspass0,[0]*len(tempspass0), 'bo')\n",
+    "plt.plot(temps,angle, 'ro-')                        #affiche la courbe expérimentale\n",
+    "plt.plot(tempspass0,[0]*len(tempspass0), 'bo')      #affiche les points d'angle 0°\n",
     "plt.axis([tdeb1, tfin1, min(angle),max(angle)])\n",
     "plt.title(\"Extraction des temps de passage par zéros\")\n",
     "plt.xlabel(\"Temps (s)\")\n",
@@ -134,7 +134,7 @@
     "##################################### Détermination des maximums #########################################\n",
     "\n",
     "#On va ensuite cherche les maximums entre chaque annulation\n",
-    "nbremax = len(indicepass0)-1\n",
+    "nbremax = len(indicepass0)-1 # nombre de crête\n",
     "valeurmax = []\n",
     "tempsmax = []\n",
     "\n",
@@ -161,7 +161,7 @@
     "\n",
     "#On va maintenant faire du clustering (en supposant que l'amplitude ne fait que décroître)\n",
     "\n",
-    "varangle = 3 #pas pour le clustering\n",
+    "varangle = 3 #pas pour le clustering, on peut bouger autour du max trouvé de 3 degrés\n",
     "anglefinal = []\n",
     "uanglefinal = []\n",
     "periodefinal = []\n",
@@ -177,7 +177,7 @@
     "    anglefinal.append(np.mean(valeurmax[inddeb:indfin+1]))\n",
     "    uanglefinal.append(np.std(valeurmax[inddeb:indfin+1]))\n",
     "    periodefinal.append(2*(tempspass0[indfin]-tempspass0[inddeb])/(indfin-inddeb))\n",
-    "    uperiodefinal.append(2*(tempsechant/2)/(indfin-inddeb))\n",
+    "    uperiodefinal.append(2*(tempsechant/2)/(indfin-inddeb))   #le facteur 2 surestime légèrement l'incertitude (on peut faire mieux que l'écart entre deux valeurs consécutives)\n",
     "    inddeb = i+1\n",
     "    i+=1\n",
     "if boolfit:\n",
@@ -203,12 +203,12 @@
     "plt.legend(fontsize=\"20\")\n",
     "\n",
     "\n",
-    "f = open(nomwritefile, \"a\")\n",
+    "f = open(fileresult, \"a\")\n",
     "for i in range(len(periodefinal)):\n",
     "    f.write(\"{} {} {} {}\\n\".format(periodefinal[i],uperiodefinal[i],anglefinal[i],uanglefinal[i]))\n",
     "    \n",
     "    \n",
-    "################### 2 eme idée : On parcout un nombre de période suffisant et on moyenne\n",
+    "################### 2eme idée : On parcout un nombre de période suffisant et on moyenne\n",
     "\n",
     "nombredemiperiode = 10\n",
     "anglefinal1=[]\n",
@@ -271,7 +271,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -285,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
