--- a/Leçon_chimie/LC_SPCL/LC_Stereochimie.tex
+++ b/Leçon_chimie/LC_SPCL/LC_Stereochimie.tex
@@ -19,6 +19,8 @@ Titre & Auteur(s) & Editeur (année) & ISBN \\ \hline
 \url{https://truejulosdu13.github.io/assets/organic_chemistry_lessons/Cours2.pdf} & Jules Schleinitz &  ~ & ~ \\ \hline
  \url{https://spcl.ac-montpellier.fr/moodle/course/view.php?id=61} & Académie de Montpellier & Chapitre 9 & ~ \\ 
  \hline
+ Compte-rendu leçon Thibaut LC03 & & & \\
+ \hline
 \end{tabularx}
 \end{center}
 
@@ -66,28 +68,32 @@ Place de la leçon : dernier cours de chimie.s
 
 
 \section*{Introduction}
-On a vu les différents types de réactions à l'aide de mécanismes réactionnels, on va s'intéresser ici à la géométrie des produits obtenus.\\
+On a vu les différents types de réactions à l'aide de mécanismes réactionnels, on va s'intéresser ici à la géométrie des produits obtenus. Ceci est particulièrement important car scandale sanitaire \url{https://fr.wikipedia.org/wiki/Thalidomide#M\%C3\%A9canismes_de_l'effet_t\%C3\%A9ratog\%C3\%A8ne}.\\
 
 \textcolor{green}{Expérience :} \url{https://spcl.ac-montpellier.fr/moodle/pluginfile.php/18438/mod_resource/content/3/Chapitre\%209\%20-\%20Aspets\%20microscopiques\%20-\%20Activite\%203.pdf}
 
-\section{Intermédiaire réactionnel}
+\section{Chiralité: propriétés chimiques}
 
-\subsection{Exemple de mécanisme}
+\subsection{Stéréoisomères de configuration}
+Contenu: définition de molécules énantiomères et diastéréoisomères et exemples, comparaison des propriétés (biochimiques, chimiques et physiques)\\
+
+\textcolor{blue}{Manipulation :} mesure température de fusion de deux diastéréoisomères: l’acide maléique et fumarique. L’acide maléique (Z) a une température de fusion inférieure à l’acide fumarique. Ceci s’explique par la présence d’une liaison hydrogène intramoléculaire diminuant ainsi le nombre de liaisons hydrogène intermoléculaires ce qui a pour effet de le rendre moins stable.
+
+\subsection{Mélange racémique}
+Contenu : définition, application en chimie organique (exemple de la substitution nucléophile d’ordre 1 qui conduit à un mélange racémique, attaque du carbocation plan par les deux côtés de façon équiprobable).
 
 
-\subsection{Stabilité}
-
-\subsection{Stéréoisomère}
-
-
-\section{Polarimétrie de Laurent}
-
-\subsection{Principe}
+\section{Chiralité: propriétés physiques}
 
 \subsection{Loi de Biot}
+Contenu : activité optique d’une molécule chirale, énoncé de la loi de Biot, et additivité, lévogyre, dextrogyre.\\
+
+\textcolor{blue}{Manipulation :} mesure du pouvoir rotatoire du limonène (R)ou (S)
 
 \subsection{Excès énantiomérique}
+Contenu : définition et calcul à partir d’un pouvoir rotatoire.\\
 
+\textcolor{blue}{Manipulation bonus :} composition d’un mélange d’énantiomères de limonène (R) et (S) grâce à la mesure du pouvoir rotatoire total
 
 
 \section{}
